--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="title_activity_event">EventActivity</string>
     <string name="action_settings">Settings</string>
 
+    <!--Searching mas-->
+    <string name="auto_edit_text">Buscar...</string>
+
     <!--  String for the map-->
     <string name="titMuseoprado">Museo del Prado</string>
     <string name="desMuseoprado">Auditorio y Claustro Jerónimos"\n\"Viernes 19 de mayo"\n"
